ispravka greske u tex fajlu

--- a/Registracija/registracija.tex
+++ b/Registracija/registracija.tex
@@ -35,8 +35,8 @@
         \item Korisnik bira opciju za registraciju na početnoj stranici aplikacije.
         \item Sistem prikazuje formu za unos podataka (Ime, Prezime, Email, Lozinka, Broj telefona).
         \item Korisnik unosi tražene podatke i potvrđuje unos. 
-        \item Sistem validira format unetih podataka (email, jačina lozinke).\\
-        \item Sistem proverava da li korisnik sa unetim email-om već postoji u bazi.\\
+        \item Sistem validira format unetih podataka (email, jačina lozinke).
+        \item Sistem proverava da li korisnik sa unetim email-om već postoji u bazi.
         \item Sistem upisuje podatke o novom nalogu u bazu podataka sa statusom 'neaktivan'.
         \item Sistem šalje potvrdni email (verifikacioni link) na unetu adresu.
         \item Sistem obaveštava korisnika da proveri svoj email.
@@ -67,9 +67,5 @@
     \item \textbf{Dodatne informacije:} /
     \vspace{5pt}
 \end{itemize}
-
-\maketitle
-
-\section{Introduction}
 
 \end{document}
