--- a/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
+++ b/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
@@ -19,7 +19,7 @@
     \item \textbf{Preduslovi:} 
     \begin{itemize}
         \item Korisnik je povezan na internet, registrovan i ulogovan je u aplikaciju.
-        \item Sistem je povezan sa bazom podataka o projekcijama, cenama i raspoloživim sedištima.
+        \item Sistem je povezan sa bazom podataka.
     \end{itemize}
     \vspace{5pt}
     
@@ -53,8 +53,7 @@
     P1: Kupovina karte
     \begin{enumerate}
         \item Sistem proverava bonus poene korisnika i nudi popust ukoliko korisnik ima dovoljan broj poena na nalogu.
-        \item Sistem prikazuje konačnu cenu i opcije plaćanja.
-        \item Korisnik bira način plaćanja i unosi potrebne podatke
+        \item Sistem prikazuje konačnu cenu i opciju za plaćanje.
         \item Korisnik unosi podatke o plaćanju.
         \item Sistem obradjuje plaćanje.
         \item Sistem ažurira raspoloživost sedišta u bazi podataka.
@@ -67,7 +66,7 @@
         \item Korisnik potvrdjuje rezervaciju.
         \item Sistem obradjuje rezervaciju i čuva podatke o rezervisanom sedištu.
         \item Sistem ažurira raspoloživost sedišta u bazi podataka.
-        \item Sistem šalje potvrdu o rezervaciji korisniku putem e-pošte i prikazuje na 
+        \item Sistem šalje potvrdu o rezervaciji korisniku putem e-pošte i prikazuje na ekranu.
     \end{enumerate}
     \vspace{5pt}
     
