Dodat dijagram aktivnosti za online kupovinu

--- a/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
+++ b/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{graphicx}
+\usepackage[serbian]{babel}
 
 \begin{document}
 
@@ -83,5 +84,12 @@
     \item \textbf{Dodatne informacije:} /
     \vspace{5pt}
 \end{itemize}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.75\textwidth]{dijagram_aktivnosti_online_kupovina.jpg}
+    \caption{Dijagram aktivnosti: Online kupovina i registracija karte}
+    \label{fig:my_image_label}
+\end{figure}
 
 \end{document}
