Dodat dijagram sekvence za online kupovinu

--- a/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
+++ b/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
@@ -87,9 +87,16 @@
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.75\textwidth]{dijagram_aktivnosti_online_kupovina.jpg}
+    \includegraphics[width=1\textwidth]{dijagram_aktivnosti_online_kupovina.jpg}
     \caption{Dijagram aktivnosti: Online kupovina i registracija karte}
-    \label{fig:my_image_label}
+    \label{fig:dijagram_aktivnosti_online_kupovina}
+\end{figure}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{dijagram_sekvence_online_kupovina.jpg}
+    \caption{Dijagram sekvence: Online kupovina i registracija karte}
+    \label{fig:dijagram_sekvence_online_kupovina}
 \end{figure}
 
 \end{document}
