--- a/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
+++ b/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
@@ -99,4 +99,11 @@
     \label{fig:dijagram_sekvence_online_kupovina}
 \end{figure}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=0.9\textwidth]{dijagram_stanja_sedista.jpg}
+    \caption{Dijagram stanja sedišta}
+    \label{fig:dijagram_stanja_sedista}
+\end{figure}
+
 \end{document}
