Dodat dijagram aktivnosti za kupovinu na blagajni

--- a/Kupovina na blagajni/kupovina_na_blagajni.tex
+++ b/Kupovina na blagajni/kupovina_na_blagajni.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{graphicx}
+\usepackage[serbian]{babel}
 
 \begin{document}
 
@@ -97,5 +98,12 @@
     \item \textbf{Dodatne informacije:} /
     \vspace{5pt}
 \end{itemize}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.9\textwidth]{dijagram_aktivnosti_kupovina_na_blagajni.jpg}
+    \caption{Dijagram aktivnosti: Kupovina na blagajni}
+    \label{fig:dijagram_aktivnosti_kupovina_na_blagajni}
+\end{figure}
 
 \end{document}
