Dodati Dijagrami Aktivnosti u tex i pdf fajlove

--- a/Izmena Repertoara/IzmenaRepertoara.tex
+++ b/Izmena Repertoara/IzmenaRepertoara.tex
@@ -4,7 +4,6 @@
 \begin{document}
 
 \section*{Slučaj upotrebe: Izmena repertoara}
-\label{uc:online_kupovina_i_registracija}
 \vspace{10pt}
 
 \begin{itemize}
@@ -74,5 +73,16 @@ Sistem Administrator dodaje u sistem filmove koji su tek izašli ili briše one 
     
     \item \textbf{Dodatne informacije:} /
 \end{itemize}
+
+\newpage
+\subsection*{Dijagram aktivnosti}
+\begin{figure}[h!]
+\centering
+\makebox[\textwidth][c]{%
+  \includegraphics[width=0.74\textwidth]{DijagramAktivnostiIzmenaRepertoara.jpg}
+}
+    \caption{Dijagram aktivnosti slučaja upotrebe Izmena repertoara}
+    \label{fig:aktivnost-autorizacija}
+\end{figure}
 
 \end{document}
