--- a/Upravljanje Podacima/UpravljanjePodacima.tex
+++ b/Upravljanje Podacima/UpravljanjePodacima.tex
@@ -42,4 +42,18 @@
     \item \textbf{Dodatne informacije:} /
 \end{itemize}
 
+\newpage
+\subsection*{Dijagram aktivnosti}
+
+\begin{figure}[h!]
+\centering
+\makebox[\textwidth][c]{%
+  \includegraphics[width=1.5\textwidth]{DijagramAktivnostiUpravljanjePodacima.png}
+}
+    \caption{Dijagram aktivnosti slučaja upotrebe Upravljanje podacima}
+    \label{fig:aktivnost-autorizacija}
+\end{figure}
+
+
+
 \end{document}
