Dodati dijagrami u tex i pdf fajlove

--- a/Dodavanje Novih Zaposlenih/dodavanje_novih_zaposlenih.tex
+++ b/Dodavanje Novih Zaposlenih/dodavanje_novih_zaposlenih.tex
@@ -70,4 +70,39 @@
     \vspace{5pt}
 \end{itemize}
 
+\newpage
+\subsection*{Dijagram aktivnosti}
+\begin{figure}[h!]
+\centering
+\makebox[\textwidth][c]{%
+  \includegraphics[width=1.5\textwidth]{dodavanje_novih_zaposlenih_dijagaram_aktivnosti.jpg}
+}
+\caption{Dijagram aktivnosti za dodavanje novog zaposlenog}
+\label{fig:aktivnost-radnici}
+\end{figure}
+
+\newpage
+\subsection*{Dijagram sekvence}
+
+\begin{figure}[h!]
+\centering
+\makebox[\textwidth][c]{%
+  \includegraphics[width=1.5\textwidth]{dodavanje_novih_zaposlenih_dijagram_sekvence.jpg}
+}
+    \caption{Dijagram sekvence za dodavanje novog zaposlenog}
+    \label{fig:sekvenca-radnici}
+\end{figure}
+
+\newpage
+\subsection*{BPMN Dijagram saradnje za dodavanje novog zaposlenog}
+
+\begin{figure}[h!]
+\centering
+\makebox[\textwidth][c]{%
+  \includegraphics[width=1.5\textwidth]{dodavanje_zaposlenog_bpmn_saradnje.jpg}
+}
+    \caption{BPMN Dijagram saradnje za dodavanje novog zaposlenog}
+    \label{fig:bpmn}
+\end{figure}
+
 \end{document}
