Dodati dijagrami u .pdf i .tex fajlove za slučaj upotrebe Upravljanje podacima

--- a/Upravljanje Podacima/UpravljanjePodacima.tex
+++ b/Upravljanje Podacima/UpravljanjePodacima.tex
@@ -48,12 +48,34 @@
 \begin{figure}[h!]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{DijagramAktivnostiUpravljanjePodacima.png}
+  \includegraphics[width=1.5\textwidth]{upravljanje_podacima_dijagram_aktivnosti.jpg}
 }
     \caption{Dijagram aktivnosti slučaja upotrebe Upravljanje podacima}
     \label{fig:aktivnost-autorizacija}
 \end{figure}
 
+\newpage
+\subsection*{Dijagram sekvence}
 
+\begin{figure}[h!]
+\centering
+\makebox[\textwidth][c]{%
+  \includegraphics[width=1.5\textwidth]{upravljanje_podacima_dijagram_sekvence.jpg}
+}
+    \caption{Dijagram sekvence slučaja upotrebe Upravljanje podacima}
+    \label{fig:aktivnost-autorizacija}
+\end{figure}
+
+\newpage
+\subsection*{Dijagram stanja}
+
+\begin{figure}[h!]
+\centering
+\makebox[\textwidth][c]{%
+  \includegraphics[width=1\textwidth]{dijagram_stanja_filma.jpg}
+}
+    \caption{Dijagram stanja filma}
+    \label{fig:aktivnost-autorizacija}
+\end{figure}
 
 \end{document}
