Dodati dijagrami u .pdf i .tex fajlove za slučaj upotrebe Izmena repertoara

--- a/Izmena Repertoara/IzmenaRepertoara.tex
+++ b/Izmena Repertoara/IzmenaRepertoara.tex
@@ -79,9 +79,41 @@ Sistem Administrator dodaje u sistem filmove koji su tek izašli ili briše one 
 \begin{figure}[h!]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=0.74\textwidth]{DijagramAktivnostiIzmenaRepertoara.jpg}
+  \includegraphics[width=0.74\textwidth]{izmena_repertoara_dijagram_aktivnosti.jpg}
 }
     \caption{Dijagram aktivnosti slučaja upotrebe Izmena repertoara}
+    \label{fig:aktivnost-autorizacija}
+\end{figure}
+
+\newpage
+\subsection*{Dijagram sekvence}
+\begin{figure}[h!]
+\centering
+\makebox[\textwidth][c]{%
+  \includegraphics[width=1.2\textwidth]{izmena_repertoara_upravljanje_filmovima_dijagram_sekvence.jpg}
+}
+    \caption{Dijagram sekvence za upravljanje filmovima}
+    \label{fig:aktivnost-autorizacija}
+\end{figure}
+
+\newpage
+\begin{figure}[h!]
+\centering
+\makebox[\textwidth][c]{%
+  \includegraphics[width=1\textwidth]{izmena_repertoara_dijagram_sekvence.jpg}
+}
+    \caption{Dijagram sekvence za izmenu repertoara}
+    \label{fig:aktivnost-autorizacija}
+\end{figure}
+
+\newpage
+\subsection*{BPMN dijagram}
+\begin{figure}[h!]
+\centering
+\makebox[\textwidth][c]{%
+  \includegraphics[width=1.4\textwidth]{izmena_repertoara_bpmn_dijagram.jpg}
+}
+    \caption{BPMN dijagram slučaja upotrebe Izmena repertoara}
     \label{fig:aktivnost-autorizacija}
 \end{figure}
 
