Dodat dijagram sekvence za online kupovinu

--- a/Kupovina na blagajni/kupovina_na_blagajni.tex
+++ b/Kupovina na blagajni/kupovina_na_blagajni.tex
@@ -106,4 +106,11 @@
     \label{fig:dijagram_aktivnosti_kupovina_na_blagajni}
 \end{figure}
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1\textwidth]{dijagram_sekvence_kupovina_na_blagajni.jpg}
+    \caption{Dijagram sekvenci: Kupovina na blagajni}
+    \label{fig:dijagram_sekvenci_kupovina_na_blagajni}
+\end{figure}
+
 \end{document}
