Dodat bpmn dijagram procesa za online kupovinu

--- a/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
+++ b/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
@@ -101,9 +101,16 @@
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.9\textwidth]{dijagram_stanja_sedista.jpg}
+    \includegraphics[width=0.6\textwidth]{dijagram_stanja_sedista.jpg}
     \caption{Dijagram stanja sedišta}
     \label{fig:dijagram_stanja_sedista}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.8\textwidth]{bpmn_dijagram_procesa_online_kupovina.jpg}
+    \caption{BPMN dijagram procesa: Online kupovina i registracija karte}
+    \label{fig:dijagram_koriscenja_online_kupovina}
 \end{figure}
 
 \end{document}
