Refaktorisanje LaTex fajlova i dodavanje glavnog dokumenta

--- a/Kupovina na blagajni/kupovina_na_blagajni.tex
+++ b/Kupovina na blagajni/kupovina_na_blagajni.tex
@@ -1,9 +1,3 @@
-\documentclass{article}
-\usepackage{graphicx}
-\usepackage[serbian]{babel}
-
-\begin{document}
-
 \section*{Slučaj upotrebe: Kupovina na blagajni}
 \label{uc:kupovina_na_blagajni}
 \vspace{10pt}
@@ -101,16 +95,14 @@
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.9\textwidth]{dijagram_aktivnosti_kupovina_na_blagajni.jpg}
+    \includegraphics[width=0.9\textwidth]{Kupovina na blagajni/dijagram_aktivnosti_kupovina_na_blagajni.jpg}
     \caption{Dijagram aktivnosti: Kupovina na blagajni}
     \label{fig:dijagram_aktivnosti_kupovina_na_blagajni}
 \end{figure}
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1\textwidth]{dijagram_sekvence_kupovina_na_blagajni.jpg}
+    \includegraphics[width=1\textwidth]{Kupovina na blagajni/dijagram_sekvence_kupovina_na_blagajni.jpg}
     \caption{Dijagram sekvenci: Kupovina na blagajni}
     \label{fig:dijagram_sekvenci_kupovina_na_blagajni}
 \end{figure}
-
-\end{document}
