--- a/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
+++ b/Online kupovina i rezervacija/online_kupovina_i_registracija.tex
@@ -1,9 +1,3 @@
-\documentclass{article}
-\usepackage{graphicx}
-\usepackage[serbian]{babel}
-
-\begin{document}
-
 \section*{Slučaj upotrebe: Kupovina i registracija karte online}
 \label{uc:online_kupovina_i_registracija}
 \vspace{10pt}
@@ -87,30 +81,28 @@
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1\textwidth]{dijagram_aktivnosti_online_kupovina.jpg}
+    \includegraphics[width=1\textwidth]{Online kupovina i rezervacija/dijagram_aktivnosti_online_kupovina.jpg}
     \caption{Dijagram aktivnosti: Online kupovina i registracija karte}
     \label{fig:dijagram_aktivnosti_online_kupovina}
 \end{figure}
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.8\textwidth]{dijagram_sekvence_online_kupovina.jpg}
+    \includegraphics[width=0.8\textwidth]{Online kupovina i rezervacija/dijagram_sekvence_online_kupovina.jpg}
     \caption{Dijagram sekvence: Online kupovina i registracija karte}
     \label{fig:dijagram_sekvence_online_kupovina}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.6\textwidth]{dijagram_stanja_sedista.jpg}
+    \includegraphics[width=0.6\textwidth]{Online kupovina i rezervacija/dijagram_stanja_sedista.jpg}
     \caption{Dijagram stanja sedišta}
     \label{fig:dijagram_stanja_sedista}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{bpmn_dijagram_procesa_online_kupovina.jpg}
+    \includegraphics[width=0.8\textwidth]{Online kupovina i rezervacija/bpmn_dijagram_procesa_online_kupovina.jpg}
     \caption{BPMN dijagram procesa: Online kupovina i registracija karte}
     \label{fig:dijagram_koriscenja_online_kupovina}
 \end{figure}
-
-\end{document}
