--- a/Dodavanje Novih Zaposlenih/dodavanje_novih_zaposlenih.tex
+++ b/Dodavanje Novih Zaposlenih/dodavanje_novih_zaposlenih.tex
@@ -1,7 +1,3 @@
-\documentclass{article}
-\usepackage{graphicx} 
-
-\begin{document}
 
 \section*{Slučaj upotrebe: Dodavanje novih zaposlenih}
 \label{uc:dodavanje_zaposlenih}
@@ -75,7 +71,7 @@
 \begin{figure}[h!]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{dodavanje_novih_zaposlenih_dijagaram_aktivnosti.jpg}
+  \includegraphics[width=1.5\textwidth]{Dodavanje Novih Zaposlenih/dodavanje_novih_zaposlenih_dijagaram_aktivnosti.jpg}
 }
 \caption{Dijagram aktivnosti za dodavanje novog zaposlenog}
 \label{fig:aktivnost-radnici}
@@ -87,7 +83,7 @@
 \begin{figure}[h!]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{dodavanje_novih_zaposlenih_dijagram_sekvence.jpg}
+  \includegraphics[width=1.5\textwidth]{Dodavanje Novih Zaposlenih/dodavanje_novih_zaposlenih_dijagram_sekvence.jpg}
 }
     \caption{Dijagram sekvence za dodavanje novog zaposlenog}
     \label{fig:sekvenca-radnici}
@@ -99,10 +95,9 @@
 \begin{figure}[h!]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{dodavanje_zaposlenog_bpmn_saradnje.jpg}
+  \includegraphics[width=1.5\textwidth]{Dodavanje Novih Zaposlenih/dodavanje_zaposlenog_bpmn_saradnje.jpg}
 }
     \caption{BPMN Dijagram saradnje za dodavanje novog zaposlenog}
     \label{fig:bpmn}
 \end{figure}
 
-\end{document}
