--- a/Izmena Repertoara/izmena_repertoara.tex
+++ b/Izmena Repertoara/izmena_repertoara.tex
@@ -1,8 +1,3 @@
-\documentclass{article}
-\usepackage{graphicx}
-
-\begin{document}
-
 \section*{Slučaj upotrebe: Izmena repertoara}
 \vspace{10pt}
 
@@ -79,7 +74,7 @@ Sistem Administrator dodaje u sistem filmove koji su tek izašli ili briše one 
 \begin{figure}[h!]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=0.74\textwidth]{izmena_repertoara_dijagram_aktivnosti.jpg}
+  \includegraphics[width=0.74\textwidth]{Izmena Repertoara/izmena_repertoara_dijagram_aktivnosti.jpg}
 }
     \caption{Dijagram aktivnosti slučaja upotrebe Izmena repertoara}
     \label{fig:aktivnost-autorizacija}
@@ -90,7 +85,7 @@ Sistem Administrator dodaje u sistem filmove koji su tek izašli ili briše one 
 \begin{figure}[h!]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.2\textwidth]{izmena_repertoara_upravljanje_filmovima_dijagram_sekvence.jpg}
+  \includegraphics[width=1.2\textwidth]{Izmena Repertoara/izmena_repertoara_upravljanje_filmovima_dijagram_sekvence.jpg}
 }
     \caption{Dijagram sekvence za upravljanje filmovima}
     \label{fig:aktivnost-autorizacija}
@@ -100,7 +95,7 @@ Sistem Administrator dodaje u sistem filmove koji su tek izašli ili briše one 
 \begin{figure}[h!]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1\textwidth]{izmena_repertoara_dijagram_sekvence.jpg}
+  \includegraphics[width=1\textwidth]{Izmena Repertoara/izmena_repertoara_dijagram_sekvence.jpg}
 }
     \caption{Dijagram sekvence za izmenu repertoara}
     \label{fig:aktivnost-autorizacija}
@@ -111,10 +106,9 @@ Sistem Administrator dodaje u sistem filmove koji su tek izašli ili briše one 
 \begin{figure}[h!]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.4\textwidth]{izmena_repertoara_bpmn_dijagram.jpg}
+  \includegraphics[width=1.4\textwidth]{Izmena Repertoara/izmena_repertoara_bpmn_dijagram.jpg}
 }
     \caption{BPMN dijagram slučaja upotrebe Izmena repertoara}
     \label{fig:aktivnost-autorizacija}
 \end{figure}
 
-\end{document}
