--- a/Upravljanje Podacima/upravljanje_podacima.tex
+++ b/Upravljanje Podacima/upravljanje_podacima.tex
@@ -1,7 +1,3 @@
-\documentclass{article}
-\usepackage{graphicx}
-
-\begin{document}
 
 \section*{Slučaj upotrebe: Upravljanje podacima}
 \vspace{10pt}
@@ -48,7 +44,7 @@
 \begin{figure}[h!]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{upravljanje_podacima_dijagram_aktivnosti.jpg}
+  \includegraphics[width=1.5\textwidth]{Upravljanje Podacima/upravljanje_podacima_dijagram_aktivnosti.jpg}
 }
     \caption{Dijagram aktivnosti slučaja upotrebe Upravljanje podacima}
     \label{fig:aktivnost-autorizacija}
@@ -60,7 +56,7 @@
 \begin{figure}[h!]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1.5\textwidth]{upravljanje_podacima_dijagram_sekvence.jpg}
+  \includegraphics[width=1.5\textwidth]{Upravljanje Podacima/upravljanje_podacima_dijagram_sekvence.jpg}
 }
     \caption{Dijagram sekvence slučaja upotrebe Upravljanje podacima}
     \label{fig:aktivnost-autorizacija}
@@ -72,10 +68,8 @@
 \begin{figure}[h!]
 \centering
 \makebox[\textwidth][c]{%
-  \includegraphics[width=1\textwidth]{dijagram_stanja_filma.jpg}
+  \includegraphics[width=1\textwidth]{Upravljanje Podacima/dijagram_stanja_filma.jpg}
 }
     \caption{Dijagram stanja filma}
     \label{fig:aktivnost-autorizacija}
 \end{figure}
-
-\end{document}
